# pytorch-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cifar10.py  main.py  mnist.py  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  test.py  train.py
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  dependabot.yml  docker.yml  flake8.yml  lint.yml  poetry.yml  publish.yml  python.yaml  python.yml  test.yml  train.yml  type_check.yml  type_check2.yml
configs/: config.json  default.json  mnist.gin  mnist.json  mnist.yaml
datasets/: __init__.py  cifar.py  mnist.py
metrics/: accuracy.py
models/: __init__.py  cifar.py  kaggle.py  mnist_net.py  network.py
networks/: __init__.py  net.py
notebooks/: mnist.ipynb
pytorch_template/: __init__.py  cli.py
pytorch_template/datasets/: mnist.py
pytorch_template/jobs/: __init__.py  mnist.py
pytorch_template/metrics/: accuracy.py  average.py
pytorch_template/models/: lenet.py
pytorch_template/trainers/: trainer.py
pytorch_template/utils/: __init__.py
src/: __init__.py  config.py  optim.py  run.py  runner.py  train.py
src/common/: __init__.py  factory.py
src/core/: config.py  runner.py  trainer.py
src/datasets/: __init__.py  mnist.py
src/metrics/: __init__.py  accuracy.py  average.py
src/models/: __init__.py  lenet.py
src/networks/: __init__.py  dcgan.py  lenet.py  net.py
src/optimizers/: __init__.py
src/pytorch_template/: cli.py
src/pytorch_template/datasets/: mnist.py
src/pytorch_template/trainers/: __init__.py  mnist.py
src/pytorchtemplate/: __init__.py  cli.py  metric.py
src/pytorchtemplate/datasets/: __init__.py  mnist.py
src/pytorchtemplate/models/: lenet.py
src/pytorchtemplate/trainers/: mnist.py  trainer.py
src/pytorchtemplate/utils/: utils.py
src/trainers/: __init__.py  classification.py  classifier.py  mnist.py  trainer.py
src/utils/: __init__.py  factory.py  io.py  log.py  timing.py  utils.py
template/: cli.py  optim.py
template/datasets/: mnist.py
template/jobs/: job.py  mnist.py
template/models/: lenet.py
template/trainers/: mnist.py  trainer.py
template/utils/: __init__.py  conf.py  utils.py
tests/: test_models.py
trainers/: trainer.py
training/core/: __init__.py  config.py
training/datasets/: mnist.py
training/metrics/: __init__.py
training/networks/: __init__.py  net.py
training/optimizers/: __init__.py
training/trainers/: classifier.py
training/utils/: io.py
utils/: __init__.py  io.py  json_utils.py  meters.py
