[project]
name = "pytorchtemplate"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies = [
  "loguru>=0.7.3",
  "mlconfig>=0.3.2",
  "numpy>=2.4.1",
  "torch>=2.10.0",
  "torchmetrics>=1.8.2",
  "torchvision>=0.25.0",
  "tqdm>=4.67.1",
  "typer>=0.21.1",
  "wandb>=0.24.0",
]

[project.scripts]
pytorchtemplate = "pytorchtemplate.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pip>=25.3",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
  "types-pyyaml>=6.0.12.20250915",
  "types-redis>=4.6.0.20241004",
  "types-requests>=2.32.4.20260107",
  "types-six>=1.17.0.20251009",
  "types-tabulate>=0.9.0.20241207",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.1.1"
tag = true
commit = true
pre_commit_hooks = ["uv lock --upgrade", "git add uv.lock"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "SIM",  # flake8-simplify
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true
