[project]
name            = "pytorchtemplate"
version         = "0.0.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.13"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "loguru>=0.7.3",
  "mlconfig>=0.3.2",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
  "tqdm>=4.67.3",
  "typer>=0.24.1",
  "wandb>=0.26.0",
]

[project.scripts]
pytorchtemplate = "pytorchtemplate.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.10",
  "ty>=0.0.29",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version  = "0.0.0"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock --upgrade", "git add uv.lock"]

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "SIM",    # flake8-simplify
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.files]
exclude = ["uv.lock"]

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
